--- a/archives/toutiao-search/2023-11-19.md
+++ b/archives/toutiao-search/2023-11-19.md
@@ -1,58 +1,79 @@
 # 2023-11-19
 
-共 342 条
+共 358 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Nov 19 2023 21:03:50 GMT+0800 (China Standard Time) -->
-1. [男子爱运动每年体检确诊胰腺癌晚期](https://so.toutiao.com/search?keyword=男子爱运动每年体检确诊胰腺癌晚期)
+<!-- 最后更新时间 Sun Nov 19 2023 22:00:32 GMT+0800 (China Standard Time) -->
+1. [《似火流年》被赞有电影质感](https://so.toutiao.com/search?keyword=《似火流年》被赞有电影质感)
 1. [男子丢30万手机女子捡到以为老年机](https://so.toutiao.com/search?keyword=男子丢30万手机女子捡到以为老年机)
 1. [我国候鸟种群数量实现持续增长](https://so.toutiao.com/search?keyword=我国候鸟种群数量实现持续增长)
-1. [超级老声总决赛唱响长沙](https://so.toutiao.com/search?keyword=超级老声总决赛唱响长沙)
 1. [睡觉时这4个表现说明尿酸或已超标](https://so.toutiao.com/search?keyword=睡觉时这4个表现说明尿酸或已超标)
-1. [冲锋衣销量猛涨](https://so.toutiao.com/search?keyword=冲锋衣销量猛涨)
-1. [家长会上“学渣”爸爸发言有格局](https://so.toutiao.com/search?keyword=家长会上“学渣”爸爸发言有格局)
-1. [英雄联盟S13总决赛：T1战胜WBG夺冠](https://so.toutiao.com/search?keyword=英雄联盟S13总决赛：T1战胜WBG夺冠)
+1. [马尔代夫正式要求印度撤军](https://so.toutiao.com/search?keyword=马尔代夫正式要求印度撤军)
+1. [超级老声总决赛唱响长沙](https://so.toutiao.com/search?keyword=超级老声总决赛唱响长沙)
+1. [油价将调整 加50升油或省13.5-15元](https://so.toutiao.com/search?keyword=油价将调整+加50升油或省13.5-15元)
 1. [茅奖得主揭秘《宝水》中的原型人物](https://so.toutiao.com/search?keyword=茅奖得主揭秘《宝水》中的原型人物)
-1. [媒体：扬科维奇对抗韩提出新要求](https://so.toutiao.com/search?keyword=媒体：扬科维奇对抗韩提出新要求)
+1. [女子摆拍300斤大葱不到40元被约谈](https://so.toutiao.com/search?keyword=女子摆拍300斤大葱不到40元被约谈)
+1. [武磊谈质疑：我单刀进球率其实不低](https://so.toutiao.com/search?keyword=武磊谈质疑：我单刀进球率其实不低)
 1. [深圳停发失业保险金？官方辟谣](https://so.toutiao.com/search?keyword=深圳停发失业保险金？官方辟谣)
 1. [以军袭击难民营一学校 哈马斯回应](https://so.toutiao.com/search?keyword=以军袭击难民营一学校+哈马斯回应)
+1. [男子爱运动每年体检确诊胰腺癌晚期](https://so.toutiao.com/search?keyword=男子爱运动每年体检确诊胰腺癌晚期)
 1. [李佳航恭喜T1夺冠](https://so.toutiao.com/search?keyword=李佳航恭喜T1夺冠)
+1. [业主将车停在车位上频频遭开门杀](https://so.toutiao.com/search?keyword=业主将车停在车位上频频遭开门杀)
+1. [胡歌刘涛争论野外用完厕纸是否带走](https://so.toutiao.com/search?keyword=胡歌刘涛争论野外用完厕纸是否带走)
+1. [文章马伊琍一家四口罕见同框](https://so.toutiao.com/search?keyword=文章马伊琍一家四口罕见同框)
+1. [演员董晴结婚](https://so.toutiao.com/search?keyword=演员董晴结婚)
+1. [郭富城赛车场失控撞车](https://so.toutiao.com/search?keyword=郭富城赛车场失控撞车)
+1. [父女对话聊爸爸心中唯一的美女是谁](https://so.toutiao.com/search?keyword=父女对话聊爸爸心中唯一的美女是谁)
+1. [哈马斯发视频称包围以特种兵藏身地](https://so.toutiao.com/search?keyword=哈马斯发视频称包围以特种兵藏身地)
+1. [天津助学金事件当事人已申请休学](https://so.toutiao.com/search?keyword=天津助学金事件当事人已申请休学)
+1. [女子9年花费近27万吃海底捞](https://so.toutiao.com/search?keyword=女子9年花费近27万吃海底捞)
+1. [以总理首次承认可能会失去国际支持](https://so.toutiao.com/search?keyword=以总理首次承认可能会失去国际支持)
+1. [工作仅4年 90后干部张文翔落马](https://so.toutiao.com/search?keyword=工作仅4年+90后干部张文翔落马)
+1. [山东冠县：严厉整治配阴婚行为](https://so.toutiao.com/search?keyword=山东冠县：严厉整治配阴婚行为)
+1. [家长会上“学渣”爸爸发言有格局](https://so.toutiao.com/search?keyword=家长会上“学渣”爸爸发言有格局)
+1. [冲锋衣销量猛涨](https://so.toutiao.com/search?keyword=冲锋衣销量猛涨)
+1. [台湾富豪命丧曼谷酒店疑涉洗钱](https://so.toutiao.com/search?keyword=台湾富豪命丧曼谷酒店疑涉洗钱)
+1. [网友称银行取款机按键4跟新的一样](https://so.toutiao.com/search?keyword=网友称银行取款机按键4跟新的一样)
+1. [31省份平均工资公布](https://so.toutiao.com/search?keyword=31省份平均工资公布)
+1. [北方小伙被南方同事豪华版喜糖震惊](https://so.toutiao.com/search?keyword=北方小伙被南方同事豪华版喜糖震惊)
+1. [女子婚内出轨后想带私生子回归家庭](https://so.toutiao.com/search?keyword=女子婚内出轨后想带私生子回归家庭)
+1. [中方特使出席第19届麦纳麦对话会](https://so.toutiao.com/search?keyword=中方特使出席第19届麦纳麦对话会)
+1. [男子钱塘江边撒网捕鱼被卷走](https://so.toutiao.com/search?keyword=男子钱塘江边撒网捕鱼被卷走)
+1. [浙江一家4人查出同种癌 最小才16岁](https://so.toutiao.com/search?keyword=浙江一家4人查出同种癌+最小才16岁)
+1. [吉利银河E8亮相广州车展](https://so.toutiao.com/search?keyword=吉利银河E8亮相广州车展)
+1. [官方首次披露4名厅级干部被查处](https://so.toutiao.com/search?keyword=官方首次披露4名厅级干部被查处)
+1. [柯文哲怒问赖清德：你家房子何时拆](https://so.toutiao.com/search?keyword=柯文哲怒问赖清德：你家房子何时拆)
+1. [孩子感染肺炎支原体后多久可以上学](https://so.toutiao.com/search?keyword=孩子感染肺炎支原体后多久可以上学)
+1. [台剧还是华语圈的希望吗](https://so.toutiao.com/search?keyword=台剧还是华语圈的希望吗)
+1. [马航MH370事件有哪些谜团被揭开](https://so.toutiao.com/search?keyword=马航MH370事件有哪些谜团被揭开)
+1. [吉利：全年销量目标可超额完成](https://so.toutiao.com/search?keyword=吉利：全年销量目标可超额完成)
+1. [亏764亿的蔚来汽车会不会倒闭](https://so.toutiao.com/search?keyword=亏764亿的蔚来汽车会不会倒闭)
+1. [APEC刚结束 消失的流浪汉又回来了](https://so.toutiao.com/search?keyword=APEC刚结束+消失的流浪汉又回来了)
+1. [广州车展：高合HiPhi A正式亮相](https://so.toutiao.com/search?keyword=广州车展：高合HiPhi+A正式亮相)
+1. [克宫：普京掌握情报西方或会搞破坏](https://so.toutiao.com/search?keyword=克宫：普京掌握情报西方或会搞破坏)
+1. [约旦国王会见冯德莱恩](https://so.toutiao.com/search?keyword=约旦国王会见冯德莱恩)
+1. [武汉车谷江大女足1-2不敌上海女足](https://so.toutiao.com/search?keyword=武汉车谷江大女足1-2不敌上海女足)
+1. [斯诺克英锦赛：中国军团首日大捷](https://so.toutiao.com/search?keyword=斯诺克英锦赛：中国军团首日大捷)
+1. [英雄联盟S13总决赛：T1战胜WBG夺冠](https://so.toutiao.com/search?keyword=英雄联盟S13总决赛：T1战胜WBG夺冠)
+1. [媒体：扬科维奇对抗韩提出新要求](https://so.toutiao.com/search?keyword=媒体：扬科维奇对抗韩提出新要求)
 1. [周润发挑战半马](https://so.toutiao.com/search?keyword=周润发挑战半马)
 1. [SpaceX证实与“星舰”失联 其已自毁](https://so.toutiao.com/search?keyword=SpaceX证实与“星舰”失联+其已自毁)
-1. [女子9年花费近27万吃海底捞](https://so.toutiao.com/search?keyword=女子9年花费近27万吃海底捞)
-1. [郭富城赛车场失控撞车](https://so.toutiao.com/search?keyword=郭富城赛车场失控撞车)
 1. [渔政回应云梦泽公司违规捕捞](https://so.toutiao.com/search?keyword=渔政回应云梦泽公司违规捕捞)
-1. [文章马伊琍一家四口罕见同框](https://so.toutiao.com/search?keyword=文章马伊琍一家四口罕见同框)
 1. [澳大利亚两轻型飞机相撞 一架坠海](https://so.toutiao.com/search?keyword=澳大利亚两轻型飞机相撞+一架坠海)
 1. [以军将在加沙地带南部开展地面行动](https://so.toutiao.com/search?keyword=以军将在加沙地带南部开展地面行动)
-1. [业主将车停在车位上频频遭开门杀](https://so.toutiao.com/search?keyword=业主将车停在车位上频频遭开门杀)
-1. [马航MH370事件有哪些谜团被揭开](https://so.toutiao.com/search?keyword=马航MH370事件有哪些谜团被揭开)
-1. [哈马斯发视频称包围以特种兵藏身地](https://so.toutiao.com/search?keyword=哈马斯发视频称包围以特种兵藏身地)
-1. [父女对话聊爸爸心中唯一的美女是谁](https://so.toutiao.com/search?keyword=父女对话聊爸爸心中唯一的美女是谁)
 1. [WBG发文告别S13：还是未能超越强敌](https://so.toutiao.com/search?keyword=WBG发文告别S13：还是未能超越强敌)
-1. [以总理首次承认可能会失去国际支持](https://so.toutiao.com/search?keyword=以总理首次承认可能会失去国际支持)
 1. [幼女被介绍卖淫 案犯再审改判7年](https://so.toutiao.com/search?keyword=幼女被介绍卖淫+案犯再审改判7年)
 1. [江口沉银遗址已出水文物7.6万余件](https://so.toutiao.com/search?keyword=江口沉银遗址已出水文物7.6万余件)
 1. [以色列允许每天向加沙输送有限燃料](https://so.toutiao.com/search?keyword=以色列允许每天向加沙输送有限燃料)
 1. [75岁司机遇溜车用肉身挡车被压身亡](https://so.toutiao.com/search?keyword=75岁司机遇溜车用肉身挡车被压身亡)
-1. [胡歌刘涛争论野外用完厕纸是否带走](https://so.toutiao.com/search?keyword=胡歌刘涛争论野外用完厕纸是否带走)
 1. [英媒：中东将出现新的力量平衡](https://so.toutiao.com/search?keyword=英媒：中东将出现新的力量平衡)
-1. [山东冠县：严厉整治配阴婚行为](https://so.toutiao.com/search?keyword=山东冠县：严厉整治配阴婚行为)
 1. [韩媒：中国队“少林足球”臭名昭著](https://so.toutiao.com/search?keyword=韩媒：中国队“少林足球”臭名昭著)
-1. [女子摆拍300斤大葱不到40元被约谈](https://so.toutiao.com/search?keyword=女子摆拍300斤大葱不到40元被约谈)
-1. [克宫：普京掌握情报西方或会搞破坏](https://so.toutiao.com/search?keyword=克宫：普京掌握情报西方或会搞破坏)
 1. [男子因螺蛳粉里没有螺蛳要求退钱](https://so.toutiao.com/search?keyword=男子因螺蛳粉里没有螺蛳要求退钱)
 1. [中国10月进口日本水产品大减99.3%](https://so.toutiao.com/search?keyword=中国10月进口日本水产品大减99.3%)
-1. [演员董晴结婚](https://so.toutiao.com/search?keyword=演员董晴结婚)
-1. [工作仅4年 90后干部张文翔落马](https://so.toutiao.com/search?keyword=工作仅4年+90后干部张文翔落马)
 1. [香港警察官方抖音号来了](https://so.toutiao.com/search?keyword=香港警察官方抖音号来了)
 1. [蓝白阵营基层民代参选人开始合作](https://so.toutiao.com/search?keyword=蓝白阵营基层民代参选人开始合作)
-1. [网友称银行取款机按键4跟新的一样](https://so.toutiao.com/search?keyword=网友称银行取款机按键4跟新的一样)
 1. [短短两周内日本搞四场演习](https://so.toutiao.com/search?keyword=短短两周内日本搞四场演习)
-1. [女子婚内出轨后想带私生子回归家庭](https://so.toutiao.com/search?keyword=女子婚内出轨后想带私生子回归家庭)
 1. [马斯克称将提起“核弹式诉讼”](https://so.toutiao.com/search?keyword=马斯克称将提起“核弹式诉讼”)
-1. [油价将调整 加50升油或省13.5-15元](https://so.toutiao.com/search?keyword=油价将调整+加50升油或省13.5-15元)
-1. [孩子感染肺炎支原体后多久可以上学](https://so.toutiao.com/search?keyword=孩子感染肺炎支原体后多久可以上学)
 1. [上厕所玩手机可能引发多种疾病](https://so.toutiao.com/search?keyword=上厕所玩手机可能引发多种疾病)
 1. [粮食增产农民增收 有这几笔账支撑](https://so.toutiao.com/search?keyword=粮食增产农民增收+有这几笔账支撑)
 1. [马代驱逐印军队 媒体：印遭当头一棒](https://so.toutiao.com/search?keyword=马代驱逐印军队+媒体：印遭当头一棒)
@@ -66,13 +87,11 @@
 1. [无人机拍下牧羊人雪中倒影好似将军](https://so.toutiao.com/search?keyword=无人机拍下牧羊人雪中倒影好似将军)
 1. [胡歌与导演组争执该不该进可可西里](https://so.toutiao.com/search?keyword=胡歌与导演组争执该不该进可可西里)
 1. [腾冲2023年马拉松](https://so.toutiao.com/search?keyword=腾冲2023年马拉松)
-1. [浙江一家4人查出同种癌 最小才16岁](https://so.toutiao.com/search?keyword=浙江一家4人查出同种癌+最小才16岁)
 1. [汪顺5米跳台表演“炸鱼”](https://so.toutiao.com/search?keyword=汪顺5米跳台表演“炸鱼”)
 1. [文班谈生涯新高的8封盖](https://so.toutiao.com/search?keyword=文班谈生涯新高的8封盖)
 1. [周润发说跑半马不累沿途打招呼累](https://so.toutiao.com/search?keyword=周润发说跑半马不累沿途打招呼累)
 1. [英财政大臣：英国通胀问题出现转折](https://so.toutiao.com/search?keyword=英财政大臣：英国通胀问题出现转折)
 1. [90后小伙跳水救人不幸遇难](https://so.toutiao.com/search?keyword=90后小伙跳水救人不幸遇难)
-1. [官方首次披露4名厅级干部被查处](https://so.toutiao.com/search?keyword=官方首次披露4名厅级干部被查处)
 1. [俄媒称一名乌军飞行员驾机向俄投诚](https://so.toutiao.com/search?keyword=俄媒称一名乌军飞行员驾机向俄投诚)
 1. [一起见证S13冠军诞生](https://so.toutiao.com/search?keyword=一起见证S13冠军诞生)
 1. [《新闻联播》正在直播](https://so.toutiao.com/search?keyword=《新闻联播》正在直播)
@@ -98,7 +117,6 @@
 1. [南京林业大学原校长王明庥逝世](https://so.toutiao.com/search?keyword=南京林业大学原校长王明庥逝世)
 1. [男子偷功德箱的钱称是菩萨同意的](https://so.toutiao.com/search?keyword=男子偷功德箱的钱称是菩萨同意的)
 1. [文班单场8盖帽 马刺队史第三位新秀](https://so.toutiao.com/search?keyword=文班单场8盖帽+马刺队史第三位新秀)
-1. [男子钱塘江边撒网捕鱼被卷走](https://so.toutiao.com/search?keyword=男子钱塘江边撒网捕鱼被卷走)
 1. [托迪博谈法国14-0：没想着破纪录](https://so.toutiao.com/search?keyword=托迪博谈法国14-0：没想着破纪录)
 1. [以军空袭加沙南部居民区致32人死亡](https://so.toutiao.com/search?keyword=以军空袭加沙南部居民区致32人死亡)
 1. [互换特产送出活羊一只](https://so.toutiao.com/search?keyword=互换特产送出活羊一只)
@@ -145,7 +163,6 @@
 1. [乘客堵门致地铁延误8分钟被行拘](https://so.toutiao.com/search?keyword=乘客堵门致地铁延误8分钟被行拘)
 1. [爱德华兹谈英格拉姆投丢绝杀球](https://so.toutiao.com/search?keyword=爱德华兹谈英格拉姆投丢绝杀球)
 1. [东契奇：字母哥把我们内线冲爆了](https://so.toutiao.com/search?keyword=东契奇：字母哥把我们内线冲爆了)
-1. [亏764亿的蔚来汽车会不会倒闭](https://so.toutiao.com/search?keyword=亏764亿的蔚来汽车会不会倒闭)
 1. [2024年度载人航天飞行任务标识发布](https://so.toutiao.com/search?keyword=2024年度载人航天飞行任务标识发布)
 1. [网传仰望U8在道路上“四脚朝天”](https://so.toutiao.com/search?keyword=网传仰望U8在道路上“四脚朝天”)
 1. [媒体：马兴瑞访中亚5国有个重要背景](https://so.toutiao.com/search?keyword=媒体：马兴瑞访中亚5国有个重要背景)
@@ -176,7 +193,6 @@
 1. [中国渔船在鹿儿岛海域倾覆5人失踪](https://so.toutiao.com/search?keyword=中国渔船在鹿儿岛海域倾覆5人失踪)
 1. [物理老师用沙子画出声音的样子](https://so.toutiao.com/search?keyword=物理老师用沙子画出声音的样子)
 1. [仰望U9内饰公布](https://so.toutiao.com/search?keyword=仰望U9内饰公布)
-1. [马尔代夫正式要求印度撤军](https://so.toutiao.com/search?keyword=马尔代夫正式要求印度撤军)
 1. [茅奖作品《雪山大地》的创作契机](https://so.toutiao.com/search?keyword=茅奖作品《雪山大地》的创作契机)
 1. [科尔批球队第3节表现：连续4次失误](https://so.toutiao.com/search?keyword=科尔批球队第3节表现：连续4次失误)
 1. [公牛末节翻盘终结热火7连胜](https://so.toutiao.com/search?keyword=公牛末节翻盘终结热火7连胜)
